@@ -149,17 +149,17 @@ case "$enable_sha2" in
         ;;
 esac
 
-AC_ARG_ENABLE(gost, AC_HELP_STRING([--enable-gost], [Enable GOST support, experimental]))
+AC_ARG_ENABLE(gost, AC_HELP_STRING([--disable-gost], [Disable GOST support]))
 case "$enable_gost" in
-    yes)
+    no)
+        ;;
+    yes|*)
         if test "x$HAVE_SSL" != "xyes"; then
             AC_MSG_ERROR([GOST enabled, but no SSL support])
         fi
         AC_MSG_CHECKING(for GOST)
-        AC_CHECK_FUNC(EVP_PKEY_set_type_str, [],[AC_MSG_ERROR([OpenSSL >= 1.0.0 is needed for GOST support])])
+        AC_CHECK_FUNC(EVP_PKEY_set_type_str, [],[AC_MSG_ERROR([OpenSSL >= 1.0.0 is needed for GOST support, please upgrade OpenSSL or rerun with --disable-gost])])
         AC_DEFINE_UNQUOTED([USE_GOST], [1], [Define this to enable GOST support.])
-        ;;
-    no|*)
         ;;
 esac
 
