@@ -521,7 +521,7 @@ main(int argc, char *argv[])
 					case LDNS_SIGN_DSA:
 					case LDNS_SIGN_DSA_NSEC3:
 #ifdef USE_GOST
-					case LDNS_SIGN_GOST:
+					case LDNS_SIGN_ECC_GOST:
 #endif
 						ldns_key_list_push_key(keys, key);
 						/*printf("Added key at %p:\n", key);*/
