@@ -16,6 +16,8 @@
 	* Type TALINK parsed (draft-ietf-dnsop-trust-history).
 	* bugfix #304: fixed dead loop in ldns_tcp_read_wire() and
 	  ldns_tcp_read_wire_timeout().
+	* GOST support with correct algorithm numbers.
+	  OpenSSL 1.0.0 is necessary (or use --disable-gost).
 
 1.6.4	2010-01-20
 	* Imported pyldns contribution by Zdenek Vasicek and Karel Slany.
